unpackaged/main/default/objects/Fund_of_Funds_Transaction__c/Fund_of_Funds_Transaction__c.object-meta.xml
<CustomObject>
    <label>Fund of Funds Transaction</label>
    <nameField>
        <displayFormat>FoF-{0000}</displayFormat>
        <label>FoF Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund of Funds Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>