unpackaged/main/default/objects/Fund_of_Funds_Transaction__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Fund of Funds Transactions</relationshipLabel>
    <relationshipName>Fund_of_Funds_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>