unpackaged/main/default/objects/Fund_of_Funds_Transaction__c/fields/Fund_Manager_s_Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund_Manager_s_Fund__c</fullName>
    <label>Fund Manager’s Fund</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fund of Funds Transactions</relationshipLabel>
    <relationshipName>Fund_of_Funds_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>