unpackaged/main/default/objects/Fund_of_Funds_Transaction__c/fields/Transaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Notes__c</fullName>
    <label>Transaction Notes</label>
    <type>TextArea</type>
</CustomField>