unpackaged/main/default/objects/Fund_of_Funds_Transaction__c/fields/Transaction_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Quantity__c</fullName>
    <label>Transaction Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>