unpackaged/main/default/objects/Fund_of_Funds_Transaction__c/validationRules/Check_Fund_FundType.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Fund_FundType</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Fund__r.Fund_Type__c, &quot;Fund of Funds&quot;))</errorConditionFormula>
    <errorDisplayField>Fund__c</errorDisplayField>
    <errorMessage>Please select a Fund of Funds instead of a Fund.</errorMessage>
</ValidationRule>