unpackaged/main/default/objects/Fund_of_Funds_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fund__c</columns>
    <columns>Fund_Manager_s_Fund__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Transaction_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>